@@ -1,3 +1,8 @@
+2019-11-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_sha1.R: Uncomment several tests which failed
+	under r-devel on Linux at CRAN (and are so far irreproducible)
+
 2019-11-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
